# google-calendar-mcp

./: .gitignore  README.md  SETUP.md  pyproject.toml
mcp_server_google_calendar/: __init__.py  __main__.py  __main_sse__.py  schemas.py  server.py  server_sse.py
mcp_server_google_calendar/auth/: __init__.py  auth.py  scopes.py
mcp_server_google_calendar/tools/: __init__.py  tools.py
mcp_server_google_calendar/utils/: __init__.py  logs.py
