[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-google-calendar"
version = "0.1.0"
description = "MCP Server for Google Calendar integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "guinacio" }
]
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.40.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.170.0",
    "pydantic[email]>=2.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "pytest>=8.3.5",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-server-google-calendar = "mcp_server_google_calendar.server:main_sync"
mcp-server-google-calendar-sse = "mcp_server_google_calendar.server_sse:main_sse"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
